install:
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/opt/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/srv/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/srv/ftp/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/srv/http/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/boot/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/var/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/var/opt/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/var/log/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/var/log/old/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/var/spool/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/var/spool/mail/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/var/local/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/var/mail/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/var/run/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/var/lock/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/var/games/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/var/cache/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/var/lib/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/var/lib/misc/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/var/empty/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/proc/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/sbin/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/run/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/dev/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/mnt/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/etc/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/etc/skel/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/include/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/local/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/local/man/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/local/include/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/local/sbin/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/local/etc/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/local/share/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/local/share/man/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/local/src/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/local/games/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/local/bin/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/local/lib/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/sbin/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/share/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/share/man/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/share/man/man5/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/share/man/man3/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/share/man/man1/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/share/man/man8/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/share/man/man4/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/share/man/man2/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/share/man/man7/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/share/man/man6/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/share/licenses/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/share/misc/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/src/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/bin/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/lib/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/usr/lib/modprobe.d/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/home/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/bin/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/sys/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/root/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/tmp/.keep
	$(INSTALL) -D keep $(DESTDIR)/$(prefix)/var/tmp/.keep
	$(LN_S) -f $(DESTDIR)/$(prefix)/usr/lib $(DESTDIR)/$(prefix)/lib
	$(LN_S) -f $(DESTDIR)/$(prefix)/usr/lib $(DESTDIR)/$(prefix)/lib64
	$(LN_S) -r $(DESTDIR)/$(prefix)/usr/lib $(DESTDIR)/$(prefix)/usr/lib64

uninstall:
	rm -r $(DESTDIR)/$(prefix)/*

